--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vff-extension-boilerplate",
-  "version": "1.0.0",
+  "name": "vff-sport-teams",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/vff-ext.js",
   "scripts": {
     "test": "jest --coverage --no-cache",
     "test-watch": "jest --watchAll",
@@ -26,14 +26,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TwiztedDesign/vff-extension-boilerplate.git"
+    "url": "git+https://github.com/TwiztedDesign/vff-sport-teams.git"
   },
   "author": "Danny Umansky <dok.umansky@twizted-design.com> (http://www.twizted-design.com/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TwiztedDesign/vff-extension-boilerplate/issues"
+    "url": "https://github.com/TwiztedDesign/vff-sport-teams/issues"
   },
-  "homepage": "https://github.com/TwiztedDesign/vff-extension-boilerplate#readme",
+  "homepage": "https://github.com/TwiztedDesign/vff-sport-teams#readme",
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
@@ -56,6 +56,7 @@
     "sass-loader": "6.0.6",
     "script-loader": "0.7.2",
     "style-loader": "0.20.1",
+    "svg-inline-loader": "0.8.0",
     "webpack": "3.10.0",
     "webpack-shell-plugin": "0.5.0"
   },
